# Valeriyya

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  dockerfile  example.env
spotify/: Cargo.toml
spotify/src/: lib.rs  spotify_auth.rs
src/: main.rs  structs.rs  utils.rs
src/commands/: mod.rs
src/commands/application/: mod.rs  star.rs
src/commands/info/: help.rs  mod.rs  register.rs  reminder.rs
src/commands/moderation/: ban.rs  cases.rs  kick.rs  mute.rs  reason.rs  reference.rs
src/commands/music/: join.rs  leave.rs  loop_music.rs  play.rs  skip.rs
src/commands/settings/: settings.rs
token_manager/: Cargo.toml
token_manager/src/: token_manager.rs
