[package]
name = "valeriyya"
version = "0.3.0"
edition = "2021"

[profile.release]
codegen-units = 512

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
chrono = "0.4.28"
serde = "1.0.188"
serde_json = "1.0.105"
regex = "1.9.5"
bson = "2.7.0"
once_cell = "1.7"
reqwest = "0.11.11"
ytextract = "0.11.2"
futures = { version = "0.3.28", features = ["std"], default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3.15"
tracing-futures = "0.2"
iso8601-duration = "0.2.0"
dotenv = "0.15.0"

# Serenity Next Branch
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono", "voice", "framework"]
rev = "5536d0400f14642867ed07ab0865315754a86a1b"

# Poise Serenity-Next Branch
[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
rev = "70c7b26613a209e9a626772bdd1dbe8e1bd74bce"

[dependencies.mongodb]
version = "2.8.1"
default-features = false
features = ["async-std-runtime"]

# Songbird Symphonia Branch
[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
rev = "ea7cfd97dc2363870248505537d2aa94107fb23b"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[patch.crates-io]
# proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2", rev = "45ef770a5189ceca3adae9d4d6117a782da30a2a" }
# log = { git = "https://github.com/rust-lang/log", rev = "35ee9442132c4aa49d22e8f00e2ba79fe149d920" }
# # Patching Serenity
# [patch."https://github.com/serenity-rs/serenity"]
# serenity = { version = "0.11.5" }