[package]
name = "valeriyya"
version = "0.3.0"
edition = "2021"

[profile.release]
codegen-units = 512

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
chrono = "0.4.28"
serde = "1.0.188"
serde_json = "1.0.105"
regex = "1.9.5"
bson = "2.7.0"
once_cell = "1.7"
reqwest = "0.12.12"
ytextract = "0.11.2"
futures = { version = "0.3.28", features = ["std"], default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3.15"
tracing-futures = "0.2"
iso8601-duration = "0.2.0"
dotenv = "0.15.0"
humantime = "2.2.0"

[dependencies.spotify_auth]
path = "./spotify"

# Serenity Next Branch
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["builder", "cache", "gateway", "http", "model", "utils", "rustls_backend", "chrono", "voice", "framework"]
branch = "next"

# Poise Serenity-Next Branch
[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.mongodb]
version = "3.2.4"
default-features = false
features = ["openssl-tls", "compat-3-0-0", "dns-resolver"]

# Songbird Symphonia Branch
[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
branch = "serenity-next"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]